# AI-Numerolog

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
Promts/: DecryptionPrompt.txt
bot/: config.py  keyboards.py  main.py  states.py
bot/handlers/: __init__.py  common.py  numerology.py
bot/middlewares/: __init__.py
bot/services/: ai_interpreter.py  numerology_api.py  numerology_calc.py  numerology_profile.py
calc_service/: main.py
prompts/: decryption_ru.txt  numerolog_encryption_ext.txt
scripts/: deploy.sh  server-setup.sh
tests/: test_numerology_calc.py
