[project]
name = "ai-numerolog"
version = "0.1.0"
description = "Telegram bot — нумерологический анализ (квадрат Пифагора + DeepSeek)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.20,<4",
    "python-dotenv>=1.0",
    "httpx>=0.27",
]

[project.scripts]
ai-numerolog = "bot.main:run"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["bot*"]
